--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ covid19Bundle.js
 nctBundle.js
 index.html
 workspaces.html
+package-lock.json
 custom/sponsors/
 custom/*/gitops*
 data/parameters.json
@@ -15,8 +16,10 @@ data/config/gitops.json
 data/schema.graphql
 data/schema.json
 src/params.js
+data/dictionary.json
 src/css/themeoverrides.css
 src/img/sponsors/gitops-sponsors/
+src/img/logo.png
 __generated__/
 *.log
 *.bak
